--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>TRADE</title>
 </head>
-<header>
+<header style="display:block;">
     <nav>
         <div id="links1">
            <p> <a href="">TRADE</a></p>
@@ -31,6 +31,11 @@
     </nav>
 </header>
 <body>
+    <div id="FirstTrouble">
+        <h1>Value Proposition</h1>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, aspernatur magni nobis placeat asperiores deserunt assumenda esse amet repudiandae.</h4>
+        <div id="Start"><a href="">Start free trial</a></div>
+    </div>
     
 </body>
 </html>
