--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>TRADE</title>
 </head>
-<header>
+<header style="display:block;">
     <nav>
         <div id="links1">
            <p> <a href="">TRADE</a></p>
@@ -31,6 +31,45 @@
     </nav>
 </header>
 <body>
+    <div id="FirstTrouble">
+        <h1>Value Proposition</h1>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, aspernatur magni nobis placeat asperiores deserunt assumenda esse amet repudiandae.</h4>
+        <div id="Start"><a href="">Start free trial</a></div>
+    </div>
+    <div class="SecondTrouble">
+            <h4>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt laboriosam non quo eum dolore, velit, cumque soluta"</h4>
+            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo.</h6>
+    </div>
+    <div id="Plan">
+            <h1>Your Best Value Proposition</h1>
+            <h4>“If you don’t try this app, you won’t become the superhero you were meant to be”</h4>
+            <div>
+            <div class="block"><div class="rectangle-"></div></div>
+            <div class="block"><div class="circle"></div></div>
+            <div class="block"><div class="rectangle"></div></div>
+            <div class="block"><div class="rectangle-"></div></div>
+            </div>
+            <div class="desc">
+                <p>Special feature</p>
+                <h6><a href="">See more></a></h6>
+            </div>
+            <div class="desc">
+                <p>Special feature</p>
+                <h6><a href="">See more></a></h6>
+            </div>
+            <div class="desc">
+                <p>Special feature</p>
+                <h6><a href="">See more></a></h6>
+            </div>
+            <div class="desc">
+                <p>Special feature</p>
+                <h6><a href="">See more></a></h6>
+            </div>
+    </div>
+    <div class="SecondTrouble">
+        <h4>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt laboriosam non quo eum dolore, velit, cumque soluta"</h4>
+        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo.</h6>
+    </div>
     
 </body>
 </html>
